add link to options in popup page

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -28,6 +28,9 @@
       <button id="start-timer-btn2">Start Timer</button>
       <button id="reset-timer-btn2">Reset Timer</button>
     </div>
+    <div id="btn-container">
+      <a href="../options/options.html">Customize your timer</a>
+    </div>
   </body>
   <script src="popup.js"></script>
 </html>
