add link to popup page

--- a/options/options.html
+++ b/options/options.html
@@ -26,6 +26,9 @@
         <button id="save-btn2">Save Options</button>
       </div>
     </div>
+    <div class="container">
+      <a href="../popup/popup.html">Back to Popup page</a>
+    </div>
   </body>
   <script src="options.js"></script>
 </html>
